-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 4.12.2
-
None
-
Windows 10
-
-
6d805195f (master)
When adding a new preprocessor directive specifically the #define one the highlight stops working. If we close the editor and reopen it the highlight will work. The problem is always there if we to the #define in the .cpp file but it's not always if we do it in the .h file.
| For Gerrit Dashboard: QTCREATORBUG-24133 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 475531,2 | CppEditor: Force document parser run on change in header dependency | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |