CppEditor: Force document parser run on change in header dependency

Fixes: QTCREATORBUG-24133
Change-Id: Ica89d4b0922dea5f2bea513ab8e4373bc52f7250
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>